--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_friend.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_friend.xml
@@ -23,23 +23,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
+        app:layout_constraintTop_toBottomOf="@+id/addFriendToolbar"
         app:layout_constraintVertical_bias="0.0" />
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -49,7 +34,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:elevation="3dp"
+                android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView5"
                 app:layout_constraintStart_toStartOf="@+id/textView5"
                 app:layout_constraintTop_toTopOf="@+id/textView5"
@@ -197,8 +182,5 @@
                 app:layout_constraintVertical_bias="1.0">
 
             </FrameLayout>-->
-
-        </android.support.constraint.ConstraintLayout>
-    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
