--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_my_profile.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_my_profile.xml
@@ -15,173 +15,157 @@
         app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
 
     <View
+        android:id="@+id/view5"
         android:layout_width="match_parent"
         android:layout_height="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/toolbar_drop_shadow"
-        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
         app:layout_constraintVertical_bias="0.0" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="122dp"
+            android:layout_height="116dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/userpicture"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
+            app:layout_constraintHorizontal_bias="0.032"
+            app:layout_constraintStart_toStartOf="@+id/frameLayout"
+            app:layout_constraintTop_toTopOf="@+id/frameLayout" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="212dp"
+            android:layout_height="110dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
+            app:layout_constraintHorizontal_bias="0.555"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/frameLayout"
+            app:layout_constraintVertical_bias="0.548">
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="start"
+                android:text=""
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/plant_title_text_size"
+                tools:layout_editor_absoluteX="164dp"
+                tools:layout_editor_absoluteY="49dp"
+                tools:text="Jane Doodle" />
+
+            <TextView
+                android:id="@+id/experience"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/username"
+                android:layout_alignStart="@+id/username"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/plant_description_text_size"
+                tools:layout_editor_absoluteX="164dp"
+                tools:layout_editor_absoluteY="94dp"
+                tools:text="Experience: 4 months" />
+
+            <TextView
+                android:id="@+id/user_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/experience"
+                android:layout_alignStart="@+id/text_plant_data"
+                android:text=""
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/plant_description_text_size"
+                tools:layout_editor_absoluteX="164dp"
+                tools:layout_editor_absoluteY="123dp"
+                tools:text="Balcony gardener, volunteer at community garden Anna's Tuin " />
+
+        </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="193dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimaryOpacity"
+        android:elevation="-1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="@+id/profileToolbar"
+        app:layout_constraintVertical_bias="0.003">
 
-        <android.support.constraint.ConstraintLayout
+    </FrameLayout>
+
+        <View
+            android:id="@+id/view2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="2dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/border_navigation_bar"
+            app:layout_constraintBottom_toTopOf="@+id/viewPagerMyProfile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_tabs"
+            app:layout_constraintVertical_bias="0.0" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="122dp"
-                android:layout_height="116dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/userpicture"
-                app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
-                app:layout_constraintEnd_toEndOf="@+id/frameLayout"
-                app:layout_constraintHorizontal_bias="0.032"
-                app:layout_constraintStart_toStartOf="@+id/frameLayout"
-                app:layout_constraintTop_toTopOf="@+id/frameLayout" />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/id_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="51dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintVertical_bias="0.0">
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="212dp"
-                android:layout_height="110dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
-                app:layout_constraintEnd_toEndOf="@+id/frameLayout"
-                app:layout_constraintHorizontal_bias="0.555"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="@+id/frameLayout"
-                app:layout_constraintVertical_bias="0.548">
+    </android.support.design.widget.TabLayout>
 
-                <TextView
-                    android:id="@+id/username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:gravity="start"
-                    android:text=""
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/plant_title_text_size"
-                    tools:layout_editor_absoluteX="164dp"
-                    tools:layout_editor_absoluteY="49dp"
-                    tools:text="Jane Doodle" />
+        <View
+            android:id="@+id/view"
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/border_navigation_bar_vertical"
+            app:layout_constraintBottom_toTopOf="@+id/viewPagerMyProfile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/id_tabs"
+            app:layout_constraintTop_toTopOf="@+id/id_tabs"
+            app:layout_constraintVertical_bias="0.0" />
 
-                <TextView
-                    android:id="@+id/experience"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/username"
-                    android:layout_below="@+id/username"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/plant_description_text_size"
-                    tools:layout_editor_absoluteX="164dp"
-                    tools:layout_editor_absoluteY="94dp"
-                    tools:text="Experience: 4 months" />
+    <com.example.joelruhe.myapplication.CustomViewPager
+        android:id="@+id/viewPagerMyProfile"
+        android:layout_width="match_parent"
+        android:layout_height="356dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_tabs" />
 
-                <TextView
-                    android:id="@+id/user_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/text_plant_data"
-                    android:layout_below="@+id/experience"
-                    android:text=""
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/plant_description_text_size"
-                    tools:layout_editor_absoluteX="164dp"
-                    tools:layout_editor_absoluteY="123dp"
-                    tools:text="Balcony gardener, volunteer at community garden Anna's Tuin " />
-
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/frameLayout"
-                android:layout_width="match_parent"
-                android:layout_height="193dp"
-                android:layout_marginBottom="8dp"
-                android:background="@color/colorPrimaryOpacity"
-                android:elevation="-1dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.104">
-
-            </FrameLayout>
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/border_navigation_bar"
-                app:layout_constraintBottom_toTopOf="@+id/viewPagerMyProfile"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/id_tabs"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/id_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/view2"
-                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-                app:layout_constraintVertical_bias="0.0">
-
-            </android.support.design.widget.TabLayout>
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="2dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/border_navigation_bar_vertical"
-                app:layout_constraintBottom_toTopOf="@+id/viewPagerMyProfile"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/id_tabs"
-                app:layout_constraintTop_toTopOf="@+id/id_tabs"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <com.example.joelruhe.myapplication.CustomViewPager
-                android:id="@+id/viewPagerMyProfile"
-                android:layout_width="match_parent"
-                android:layout_height="283dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/id_tabs"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <!--<FrameLayout
+        <!--<FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -194,7 +178,5 @@
 
             </FrameLayout>-->
 
-        </android.support.constraint.ConstraintLayout>
-    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
