--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/drawable/custom_progressbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/drawable/custom_progressbar.xml
@@ -11,8 +11,8 @@
 <clip>
     <shape>
         <corners android:radius="8dp"/>
-        <stroke android:width="2dp" android:color="@color/colorPrimary"/>
-        <solid android:color="@color/colorPrimaryDark"/>
+        <stroke android:width="1dp" android:color="@color/colorPrimary"/>
+        <solid android:color="@color/colorPrimary"/>
     </shape>
 </clip>
 </item>
