--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/drawable/custom_progressbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/drawable/custom_progressbar.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@android:id/background">
-    <shape>
-        <corners android:radius="8dp"/>
-        <solid android:color="@color/transparent"/>
-    </shape>
-</item>
 
-<item android:id="@android:id/progress">
-<clip>
-    <shape>
-        <corners android:radius="8dp"/>
-        <stroke android:width="1dp" android:color="@color/colorPrimary"/>
-        <solid android:color="@color/colorPrimary"/>
-    </shape>
-</clip>
-</item>
+    <item android:id="@android:id/background">
+        <shape>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/transparent"/>
+            <stroke android:color="@color/colorPrimary" android:width="2dp" />
+        </shape>
+    </item>
+
+    <item android:id="@android:id/progress"
+        android:top="5dp"
+        android:bottom="5dp"
+        android:right="5dp"
+        android:left="5dp">
+        <clip>
+            <scale android:scaleWidth="100%" >
+                <shape>
+                    <corners android:radius="10dp"/>
+                    <solid android:color="@color/colorPrimary"/>
+                </shape>
+            </scale>
+        </clip>
+    </item>
 </layer-list>
