--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_my_friend.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_my_friend.xml
@@ -188,7 +188,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_tabs"
+        app:layout_constraintTop_toBottomOf="@+id/view8"
         app:layout_constraintVertical_bias="1.0" />
 
     <android.support.design.widget.TabLayout
